# sapimo

./: .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER_COMMANDS.md  README.md  agents.md  docker-compose.yml.bak  plan_docker.md  pyproject.toml  requirements.txt  sapimo-docker.yml
.github/: general.copilot-instructions.md  python.copilot-instructions.md
.github/agents/: pytest-builder.agent.md
.github/skills/pytest-builder/: SKILL.md
api_mock/: app.py  config.yaml
docker/: test-aws-integration.py  test-aws-mocks.sh
docker/aws-mock/: Dockerfile  requirements.txt
docker/gateway/: Dockerfile  main.py  mock_handler.py
docs/: Cognito-Support.md  Container-Feature-Recovery-Plan.md  Container-Lambda-Plan.md  Docker-Architecture.md  Docker-Setup.md  FastAPI-App-Mode-Plan.md  LLM-Guide.md
docs/llm/: codebase-map.md  config-format.md  mock-system.md  old-vs-new-gateway-diff.md  rules.md
docs/sample/: config.yaml
lambda/test/: Dockerfile  app.py
src/sapimo/: README.jp.md  constants.py  exceptions.py  main.py  utils.py
src/sapimo/docker/: __init__.py  aws_mock_server.py  compose_generator.py  config_manager.py  lambda_execution_logger.py  local_lambda_runner.py  log_reader.py  mock_manager.py  single_compose_generator.py  volume_manager.py
src/sapimo/docker/templates/aws_mock/: Dockerfile  aws_mock_server.py  requirements.txt
src/sapimo/docker/templates/gateway/: Dockerfile  main.py  mock_handler.py  openapi_example_resolver.py
src/sapimo/docker/templates/lambda_runtime/: Dockerfile
src/sapimo/docker/templates/single/: Dockerfile  requirements.txt
src/sapimo/mock/: __init__.py  api.py  mediator_route.py  mock_manager.py
src/sapimo/mock/executer/: invoke_info.py  lambda_invoker.py
src/sapimo/parser/: cdk_parser.py  cf_resource_parser.py  config_parser.py  container_lambda_parser.py  fn_resolver.py  sam_parser.py  tf_plan_parser.py  yaml_loader.py
tests/unit/: test_cdk_parser.py  test_cf_resource_parser.py  test_cognito_mock.py  test_compose_generator_docker_setup.py  test_container_lambda_parser.py  test_docker_config_manager.py  test_fastapi_app_mode.py  test_gateway_change_input_compat.py  test_gateway_custom_authorizer.py  test_gateway_docs_routes.py  test_gateway_event_format.py  test_gateway_jwt_authorizer_passthrough.py  test_gateway_openapi_example.py  test_gateway_options_mode.py  test_gateway_s3_trigger.py  test_image_info.py  test_lambda_execution_logs.py  test_local_lambda_runner.py  test_main_single_container_flow.py  test_mock_handler_path_params.py  test_mock_package_import.py  test_sam_parser.py  test_single_compose_generator.py  test_tf_plan_parser.py  test_volume_manager.py
