[project]
name = "sapimo"
version = "0.0.1"
description = "SAM(lambda-APIgateway) API Mock"
authors = [{ name = "ajinori" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "click>=8.0,<9",
    "fastapi>=0.88.0,<0.115",
    "uvicorn[standard]>=0.21.1,<0.32",
    "moto>=4.0.13,<6",
    "boto3>=1.26.45,<2",
    "botocore>=1.29,<2",
    "python-jose[cryptography]>=3.3.0,<4",
    "pyyaml>=6.0",
    "httpx>=0.28.1",
]

[project.scripts]
sapimo = "sapimo.main:main"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "pytest-mock>=3.10.0,<4",
    "pytest-cov>=4.0.0,<5",
    "pytest-env>=0.8.1,<0.9",
]

[tool.hatch.build.targets.sdist]
include = ["src/sapimo"]

[tool.hatch.build.targets.wheel]
include = ["src/sapimo"]

[tool.hatch.build.targets.wheel.sources]
"src/sapimo" = "sapimo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-v -x"
env = [
    "D:TEST_FILE_DIR=AAA",
]
