[project]
name = "sapimo"
version = "0.0.1"
description = "SAM(lambda-APIgateway) API Mock"
authors = [{ name = "ajinori" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "httpx>=0.28.1",
    "fastapi[standard]>=0.135.2",
    "python-jose[cryptography]>=3.5.0",
    "pyyaml>=6.0.3",
    "boto3>=1.42.75",
    "moto>=5.1.22",
    "click>=8.3.1",
]

[project.scripts]
sapimo = "sapimo.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/sapimo", "src/sapimo/docker/templates"]

[tool.hatch.build.targets.wheel]
include = ["src/sapimo", "src/sapimo/docker/templates"]

[tool.hatch.build.targets.wheel.sources]
"src/sapimo" = "sapimo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-v -x"
env = [
    "D:TEST_FILE_DIR=AAA",
]
